--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lottie-react": "^2.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0-rc.2",
