--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
+    "react-is": "^19.2.3",
     "react-leaflet": "^5.0.0-rc.2",
     "react-lottie": "^1.2.10",
     "react-lottie-player": "^2.1.0",
