fixed minor css

--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.10",
     "axios": "^1.13.2",
+    "cookie-parser": "^1.4.7",
     "core-js": "^3.47.0",
     "firebase": "^12.6.0",
+    "jsonwebtoken": "^9.0.3",
     "leaflet": "^1.9.4",
     "lottie-react": "^2.4.1",
     "react": "^19.2.0",
