--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "jsonwebtoken": "^9.0.3",
     "leaflet": "^1.9.4",
     "lottie-react": "^2.4.1",
+    "motion": "^12.26.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "react-is": "^19.2.3",
